tests/fixtures/invalid/bytes_rshift_bool.py
# Cannot right shift Bytes and Bool
x: bytes = b"hello" >> True
